--- a/Snake.vcxproj
+++ b/Snake.vcxproj
@@ -136,6 +136,9 @@
   <ItemGroup>
     <ClCompile Include="game.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="game.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
